<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Taran Rai & Benjamin Wang on 09/11/17 5:32 PM
  ~ Copyright (c) 2017. All rights reserved
  ~
  ~ Last modified 09/11/17 12:36 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ca.bcit.ass3.rai_wang.EventDetail">

    <include layout="@layout/toolbar_main" android:id="@+id/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_detail_heading"
        style="@style/activityHeading"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_master_table_name"
        style="@style/tableName_style"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/event_detail_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="ca.bcit.lab.sqlite_lab_rai.EventDetail"
        style="@style/tableLayout_style">

    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_detail_button"
        android:text="@string/addDetailButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/go_to_event_master"
        android:text="@string/go_to_event_master"/>

</LinearLayout>